--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Accuknox FE Assignment</title>
   </head>
   <body style="background-color: #e9f6ff; height: 100vh" ,>
     <noscript>You need to enable JavaScript to run this app.</noscript>
